[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Themes/MenuWidgetTheme.tres" type="Theme" id=1]
[ext_resource path="res://Components/Menus/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/Menus/Menu/LevelMenu/LevelMenu.gd" type="Script" id=3]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 510.0
margin_top = 200.0
margin_right = 780.0
margin_bottom = 520.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Panel"]
margin_top = 16.0
margin_right = 270.0
margin_bottom = 37.0
text = "Choose Level"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerList" type="ItemList" parent="Panel"]
margin_left = 30.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = 240.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 31.0
margin_top = 247.0
margin_right = 99.9931
margin_bottom = 287.448
text = "Back"

[node name="StartButton" parent="Panel" instance=ExtResource( 2 )]
margin_left = 182.0
margin_top = 248.0
margin_right = 238.993
margin_bottom = 288.448
disabled = true
text = "Start"
